# Arcade

./: .gitignore  CMakeLists.txt  Makefile  README.md
api/: Color.cpp  IGameLib.hpp  IGraphicLib.hpp  PixelBox.cpp  TextBox.cpp  entryPoint.cpp
core/: Core.cpp  Core.hpp  DLLoader.hpp  Error.cpp  Error.hpp  Errors.cpp  Errors.hpp  MainPars.cpp  MainPars.hpp  MainParse.cpp  MainParse.hpp  Makefile  Menu.cpp  Menu.hpp  ParseError.cpp  ParseError.hpp  ScoreManager.cpp  ScoreManager.hpp  SyntaxAnalyser.cpp  SyntaxAnalyser.hpp  core  main.cpp
doc/: README.md  TECHNICAL_DOCUMENTATION.md  UTILISATION.md
games/game1/: Makefile  entry.cpp
games/game2/: Makefile
games/nibbler/: Color.cpp  Color.hpp  IGameLib.hpp  Makefile  Nibbler.cpp  Nibbler.hpp  TextBox.hpp  entry.cpp
games/pacman/: Ghost.cpp  Ghost.hpp  Makefile  Pacman.cpp  Pacman.hpp  PacmanCommon.hpp  PixelBox.cpp  Player.cpp  Player.hpp  entry.cpp
lib/SDL/: Makefile
lib/SDL2/: Makefile
lib/SFML/: Makefile  SFML.cpp  SFML.hpp  entryPoint.cpp
lib/lib_SDL2/: IGraphicLib.hpp  Makefile  PixelBox.cpp  SDLGraphicLib.cpp  SDLGraphicLib.hpp  entry.cpp
lib/lib_SFML/: Keys.hpp  Makefile  PixelBox.hpp  SFML.cpp  SFML.hpp  SFMLGraphicLib.cpp  SFMLGraphicLib.hpp  Vect.hpp  entry.cpp  main.c
lib/lib_nCurses/: Makefile  NCursesGraphicLib.cpp  NCursesGraphicLib.hpp  TextBox.cpp  entry.cpp
lib/nCurses/: Makefile
